--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Genießer-App</string>
+    <string name="select_location">Select Location</string>
 </resources>
