--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Genießer-App</string>
     <string name="select_location">Select Location</string>
+	<string name="braces">(%s)</string>
 </resources>
