--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- override BuildConfig name -->
-	<string name="hbc_target_build_config_name" translatable="false">de.nicidienase.geniesser_app.BuildConfig</string>
+	<string name="hbc_target_build_config_name"
+			translatable="false"
+			tools:override="true">de.nicidienase.geniesser_app.BuildConfig</string>
 </resources>
