--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Genießer-App</string>
     <string name="select_location">Select Location</string>
 	<string name="braces">(%s)</string>
+
+    <string name="transition_name_news_image" translatable="false">news_image_%s</string>
+    <string name="transition_name_news_title" translatable="false">news_title_%s</string>
+    <string name="transition_name_meal_title" translatable="false">meal_title_%s</string>
+    <string name="transition_name_meal_price" translatable="false">meal_price_%s</string>
 </resources>
