--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Genießer-App</string>
     <string name="select_location">Select Location</string>
 	<string name="braces">(%s)</string>
+    <string name="valid_from_till">Valid from %s \ntill %s</string>
 
     <string name="transition_name_news_image" translatable="false">news_image_%s</string>
     <string name="transition_name_news_title" translatable="false">news_title_%s</string>
